--- a/style.css
+++ b/style.css
@@ -19,10 +19,19 @@ body {
     justify-content: center;
 
 }
+
+#span {
+    display: flex;
+    justify-content: center;
+    align-items: stretch;
+
+
+}
+
 #monday {
     background-color: var(--closedbackground);
- 
-
+ }
+/* 
 }
 #tuesday {
     background-color: var(--closedbackground);
@@ -42,3 +51,4 @@ body {
 #sunday {
     background-color: var(--closedbackground);
 }
+ */
