--- a/style.css
+++ b/style.css
@@ -127,7 +127,8 @@ body {
 
 .control,
 .left-right,
-#display-time {
+#display-time,
+.center-inputs {
     /* centers things in the middle */
     display: flex;
     justify-content: center;
@@ -198,14 +199,56 @@ body {
 
 }
 
-.center-inputs {
-    display: flex;
-    justify-content: center
-}
-
 .timer-container {
     /* the div for the time input */
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
 }
+
+.timer-container div {
+    background: #64c247;
+    line-height: 0px;
+    display: flex;
+    align-items: center;
+}
+
+.center-inputs button {
+    background-color: #64c247;
+    cursor: pointer;
+
+}
+
+.timer-container div,
+.center-inputs button,
+.center-inputs input[type=text],
+.center-inputs input[type=time],
+.timer-container input[type=time] {
+    padding: 0.25em 0.5em 0.25em 0.5em;
+    margin: 0.25em 0.5em 0.25em 0.5em;
+    box-sizing: border-box;
+    border-style: none;
+    border-radius: 0.3em;
+    color: #42484d;
+    font-family: open sans;
+    font-weight: 600;
+}
+
+.center-inputs input[type=text] {
+    background-color: #64c247;
+
+}
+
+.center-inputs input[type=time] {
+    background-color: #64c247;
+
+}
+
+.timer-container input[type=time] {
+    background-color: white;
+}
+
+.timer-container div p:last-of-type {
+    margin: 0em 0.25em 0em 0.45em;
+}
+
