--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.12,
+* Autoprefixer: v10.4.4
+* Browsers: last 4 version
+*/
+
 :root {
     --blank: none;
     --highlight-color: #64c247;
@@ -14,18 +21,26 @@ body {
 .setting-container {
     display: none;
     /* display: inline; */
-    flex-direction: column;
-    justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     text-align: center;
 
     padding: 2em 1em 2em 1em;
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
     background-color: white;
     border-radius: 0.2em;
-    box-shadow: 0 0 0px 500em rgb(0, 0, 0, 0.5);
+    -webkit-box-shadow: 0 0 0px 500em rgb(0, 0, 0, 0.5);
+            box-shadow: 0 0 0px 500em rgb(0, 0, 0, 0.5);
 
     font-family: open sans;
     z-index: 1;
@@ -45,8 +60,12 @@ body {
 
 
 .nav-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     margin-left: max;
     margin-right: max;
 }
@@ -54,12 +73,16 @@ body {
 .nav {
     /* the nav hover thing that is visible */
     line-height: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     font-family: IBM Plex Mono;
     font-size: 25px;
     font-weight: bold;
     background-color: var(--bodycolour);
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     width: 15vw;
     border-style: solid;
     border-width: 0.4em;
@@ -95,20 +118,28 @@ body {
     display: none;
     border-radius: 0.2em;
     background-color: var(--highlight-color);
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     width: 5vw;
-    align-items: center;
-    animation-duration: 0.60s;
-    animation-fill-mode: forwards;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-animation-duration: 0.60s;
+            animation-duration: 0.60s;
+    -webkit-animation-fill-mode: forwards;
+            animation-fill-mode: forwards;
 
 }
 
 #nav-left {
-    animation-name: nav-anim-left;
+    -webkit-animation-name: nav-anim-left;
+            animation-name: nav-anim-left;
 }
 
 #nav-right {
-    animation-name: nav-anim-right;
+    -webkit-animation-name: nav-anim-right;
+            animation-name: nav-anim-right;
 }
 
 #nav-right a {
@@ -117,12 +148,13 @@ body {
 }
 
 
-@keyframes nav-anim-left {
+@-webkit-keyframes nav-anim-left {
     0% {
 
         opacity: 0;
         color: rgba(0, 0, 0, 0);
-        transform: translateX(5vw);
+        -webkit-transform: translateX(5vw);
+                transform: translateX(5vw);
     }
 
     65% {
@@ -136,11 +168,51 @@ body {
     }
 }
 
+
+@keyframes nav-anim-left {
+    0% {
+
+        opacity: 0;
+        color: rgba(0, 0, 0, 0);
+        -webkit-transform: translateX(5vw);
+                transform: translateX(5vw);
+    }
+
+    65% {
+        color: rgba(0, 0, 0, 0);
+    }
+
+    100% {
+
+        opacity: 1;
+
+    }
+}
+
+@-webkit-keyframes nav-anim-right {
+    0% {
+        opacity: 0;
+        color: rgba(0, 0, 0, 0);
+        -webkit-transform: translateX(-5vw);
+                transform: translateX(-5vw);
+    }
+
+    65% {
+        color: rgba(0, 0, 0, 0);
+    }
+
+    100% {
+        opacity: 1;
+    }
+
+}
+
 @keyframes nav-anim-right {
     0% {
         opacity: 0;
         color: rgba(0, 0, 0, 0);
-        transform: translateX(-5vw);
+        -webkit-transform: translateX(-5vw);
+                transform: translateX(-5vw);
     }
 
     65% {
@@ -155,10 +227,14 @@ body {
 
 .nav-container:hover #nav-right {
     opacity: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 
 .nav-container:hover #nav-left {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 
 }
@@ -168,8 +244,12 @@ body {
 #display-time,
 .center-inputs {
     /* centers things in the middle */
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 }
 
 
@@ -181,8 +261,11 @@ body {
     cursor: pointer;
     position: relative;
     /* use top and left to ajust */
-    align-content: flex-start;
-    justify-content: flex-start;
+    -ms-flex-line-pack: start;
+        align-content: flex-start;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
     margin-right: auto;
 }
 
@@ -190,8 +273,11 @@ body {
     color: #32373b;
     cursor: pointer;
     position: relative;
-    align-content: flex-end;
-    justify-content: flex-end;
+    -ms-flex-line-pack: end;
+        align-content: flex-end;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
     margin-left: auto
 }
 
@@ -217,12 +303,21 @@ body {
 
 .box {
     /* holds the div for the day */
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    box-shadow: -10px 12px 14px 0px var(--highlight-color);
-    flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-shadow: -10px 12px 14px 0px var(--highlight-color);
+            box-shadow: -10px 12px 14px 0px var(--highlight-color);
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     font-family: open sans, sans-serif;
-    backdrop-filter: brightness(130%);
+    -webkit-backdrop-filter: brightness(130%);
+            backdrop-filter: brightness(130%);
     margin: 2em;
     padding: 0.5em 1em 0.5em 1em;
     color: var(--text-color);
@@ -234,23 +329,36 @@ body {
 
 .box:first-child h2 {
     margin-top: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 
 }
 
 .timer-container {
     /* the div for the time input */
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
 }
 
 .timer-container div {
     background: var(--highlight-color);
     line-height: 0px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 .center-inputs button {
@@ -266,7 +374,8 @@ body {
 .timer-container input[type=time] {
     padding: 0.25em 0.5em 0.25em 0.5em;
     margin: 0.25em 0.5em 0.25em 0.5em;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     border-style: none;
     border-radius: 0.3em;
     color: var(--text-color);
